--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     "codelyzer": "^6.0.1",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~6.0.0",
-    "karma": "~6.3.2",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma": "^6.3.19",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "karma-junit-reporter": "^2.0.1",
